I am so behind, and I have no idea what I am doing

--- a/Instructions/Starter_Code/credit_risk_resampling.ipynb
+++ b/Instructions/Starter_Code/credit_risk_resampling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "[5 rows x 86 columns]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
        "[8 rows x 95 columns]"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
        "Counter({'low_risk': 51352, 'high_risk': 51352})"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,43 +814,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6243921502270245"
+       "0.6287523518296934"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "from sklearn.metrics import balanced_accuracy_score\n",
+    "y_pred = model.predict(X_test)\n",
     "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[   51,    36],\n",
-       "       [ 5776, 11342]], dtype=int64)"
-      ]
-     },
-     "execution_count": 138,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Display the confusion matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
